Update Design web
Avanço 1

--- a/SITE/index.html
+++ b/SITE/index.html
@@ -23,14 +23,109 @@
             </ul>
         </div>
         <div class="nav-button">
-            <button class="btn white-btn" id="loginBtn">Sign In</button>
-            <button class="btn" id="registerBtn"> Sign Up</button>
+            <button class="btn white-btn" id="loginBtn" onclick="login()">Sign In</button>
+            <button class="btn" id="registerBtn" onclick="register()"> Sign Up</button>
         </div>
         <div class="nav-menu-btn">
-            <i class="bx bx-menu"></i>
+            <i class="bx bx-menu" onclick="myMenuFunction()"></i>
         </div>
 
     </nav>
+    <!-------------------- FORM BOX ------------------>
+        <div class="form-box">
+
+            <!---------------login form  --------------->            
+            <div class="login-container" id="login">
+                <div class="=top">
+                    <span> Dont't have an account? <a href="#" onclick="register()">Sign UP</a></span>
+                    <head>Login</head>
+                </div>
+                    <div class="=input-box">
+                        <input type="text" class="input-field" placeholder="Username or Email">
+                        <i class="bx bx-user"></i>
+                    </div>
+                </div>
+                <div class="=input-box">
+                    <input type="password" class="input-field" placeholder="password">
+                    <i class="bx bx-lock-alt"></i>
+                </div>
+                <div class="=input-box">
+                    <input type="submit" class="submit" value="Sign In">
+                </div>
+                <div class="two-col">
+                    <div class="one">
+                        <input type="checkbox" id="login-check">
+                        <label for="login-check"> Remember Me</label>
+                    </div>
+                    <div class="one">
+                        <label><a href="#">Forgot password?</a></label>
+                    </div>
+                </div>
+            </div>
+
+            <!---------------------- Register Form----------------->
+
+            <div class="register-container" id="register">
+                <div class="=top">
+                    <span> Have an account? <a href="#" onclick="login()">Login</a></span>
+                    <head>Sign UP</head>
+                </div>
+                <div class="two-forms">
+                    <div class="=input-box">
+                        <input type="text" class="input-field" placeholder="Firstname">
+                        <i class="bx bx-user"></i>
+                    </div>
+                    <div class="=input-box">
+                        <input type="text" class="input-field" placeholder="Lastname">
+                        <i class="bx bx-user"></i>
+                    </div>
+                </div>
+                <div class="=input-box">
+                    <input type="text" class="input-field" placeholder="Email">
+                    <i class="bx bx-envelope"></i>
+                </div>
+                <div class="=input-box">
+                    <input type="password" class="input-field" placeholder="password">
+                    <i class="bx bx-lock-alt"></i>
+                </div>
+                <div class="=input-box">
+                    <input type="submit" class="submit" value="register">
+                </div>
+                <div class="two-col">
+                    <div class="one">
+                        <input type="checkbox" id="register-check">
+                        <label for="register-check"> Remember Me</label>
+                    </div>
+                    <div class="two">
+                        <label><a href="#">Terms & conditionns</a></label>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+<script>
+    var a = document.getElementById("loginBtn");
+    var b = document.getElementById("registerBtn");
+    var x = document.getElementById("login");
+    var y = document.getElementById("register");
+
+    function login()
+    {
+        x.style.left="4px";
+        y.style.right="-520px";
+        a.className +="white-btn";
+        b.className = "btn";
+    }
+    function register()
+    {
+        x.style.left="-510px";
+        y.style.right="-5px";        
+        a.className +="btn";
+        b.className = "white-btn";
+    }
+
+</script>
+
 </body>
 </html> 
